im serious this time

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                        <img src="C:\Users\jonat\Documents\codingBootcamp\myRepo\BootStrap-porfolio\pics\Camera Roll\hack.jpg" class="img-fluid" alt="Responsive image">
+                        <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/code.jpg?raw=true" class="img-fluid" alt="Responsive image">
                 </div>
                 <div class="col-md-8">
                         <p>I'm just a student at the University of Minnesota coding BootCamp.
@@ -71,7 +71,7 @@
                                </p>
                     </div>
                     <div class="col-md-4">
-                    <img src="C:\Users\jonat\Documents\codingBootcamp\myRepo\BootStrap-porfolio\pics\Camera Roll\code.jpg" class="img-fluid" alt="Responsive image">
+                    <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/hack.jpg?raw=true" class="img-fluid" alt="Responsive image">
                     </div>
             </div>
         </div>
