--- a/portfolio.html
+++ b/portfolio.html
@@ -63,13 +63,13 @@
             <div class="row">
                 <div class="col-md-4">
                                 <div class="work">
-                              <img src="C:\Users\jonat\Documents\codingBootcamp\myRepo\BootStrap-porfolio\pics\Camera Roll\scratchMatch.jpg" class="img-fluid" alt="Scratch Match">  
+                              <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/scratchMatch.jpg?raw=true" class="img-fluid" alt="Scratch Match">  
                                 <h3>Scratch Match</h3>
                                 </div>
                 </div>
                 <div class="col-md-4">
                               <div class="work">
-                                  <img src="C:\Users\jonat\Documents\codingBootcamp\myRepo\BootStrap-porfolio\pics\Camera Roll\scratch.jpg" class="img-fluid" alt="Scratch game">
+                                  <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/scratch.jpg?raw=true" class="img-fluid" alt="Scratch game">
                                   <h3>Scratch</h3>
                               </div>  
                 </div>
@@ -87,13 +87,13 @@
             <div class="row">
                     <div class="col-md-4">
                             <div class="work">
-                                <img src="C:\Users\jonat\Pictures\Camera Roll\school.jpg" class="img-fluid" alt="school">
+                                <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/school.jpg?raw=true" class="img-fluid" alt="school">
                                 <h3>School</h3>
                             </div>
                     </div>
                     <div class="col-md-4">
                         <div class="work">
-                            <img src="C:\Users\jonat\Documents\codingBootcamp\myRepo\BootStrap-porfolio\pics\Camera Roll\resume.jpg" class="img-fluid" alt="resume">
+                            <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/resume.jpg?raw=true" class="img-fluid" alt="resume">
                             <h3>Resume</h3>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
             <div class="row">
                     <div class="col-md-4">
                         <div class="work">
-                        <img src="C:\Users\jonat\Documents\codingBootcamp\myRepo\BootStrap-porfolio\pics\Camera Roll\hobbies.jpg" class="img-fluid" alt="hobbies">
+                        <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/hobbies.jpg?raw=true" class="img-fluid" alt="hobbies">
                         <h3>Hobbies</h3>
                         </div>
                     </div>
