--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/index.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\jonat\Documents\codingBootcamp\myRepo\BootStrap-porfolio\index.css">
     
 
 
