--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="C:\Users\jonat\Documents\codingBootcamp\myRepo\BootStrap-porfolio\index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     
 
 
@@ -21,9 +21,9 @@
                 <nav class="navbar navbar-light bg-light" id="nav">
                         <span class="navbar-brand mb-0 h1"><div id="nav3"><h1 id="jon">Jonathan Hernandez</h1></div></span>
                         <div id="links">
-                            <a href="file:///C:/Users/jonat/Documents/codingBootcamp/myRepo/BootStrap-porfolio/index.html" class="links">About</a>
-                            <a href="file:///C:/Users/jonat/Documents/codingBootcamp/myRepo/BootStrap-porfolio/contact.html" class="links">Contact</a>
-                            <a href="file:///C:/Users/jonat/Documents/codingBootcamp/myRepo/BootStrap-porfolio/portfolio.html" class="links">Portfolio</a>
+                            <a href="index.html" class="links">About</a>
+                            <a href="contact.html" class="links">Contact</a>
+                            <a href="portfolio.html" class="links">Portfolio</a>
                         </div>
                       </nav>
         </div>
@@ -52,7 +52,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                        <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/code.jpg?raw=true" class="img-fluid" alt="Responsive image">
+                        <img src="pics/Camera%20Roll/code.jpg" class="img-fluid" alt="Responsive image">
                 </div>
                 <div class="col-md-8">
                         <p>I'm just a student at the University of Minnesota coding BootCamp.
@@ -71,7 +71,7 @@
                                </p>
                     </div>
                     <div class="col-md-4">
-                    <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/hack.jpg?raw=true" class="img-fluid" alt="Responsive image">
+                    <img src="pics/Camera%20Roll/hack.jpg?raw=true" class="img-fluid" alt="Responsive image">
                     </div>
             </div>
         </div>
