--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="C:\Users\jonat\Documents\codingBootcamp\myRepo\BootStrap-porfolio\index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
 
 
 </head>
@@ -20,9 +20,9 @@
             <nav class="navbar navbar-light bg-light" id="nav">
                 <span class="navbar-brand mb-0 h1"><div id="nav3"><h1 id="jon">Jonathan Hernandez</h1></div></span>
                 <div id="links">
-                        <a href="file:///C:/Users/jonat/Documents/codingBootcamp/myRepo/BootStrap-porfolio/index.html" class="links">About</a>
-                        <a href="file:///C:/Users/jonat/Documents/codingBootcamp/myRepo/BootStrap-porfolio/contact.html" class="links">Contact</a>
-                        <a href="file:///C:/Users/jonat/Documents/codingBootcamp/myRepo/BootStrap-porfolio/portfolio.html" class="links">Portfolio</a>
+                        <a href="index.html" class="links">About</a>
+                        <a href="contact.html" class="links">Contact</a>
+                        <a href="portfolio.html" class="links">Portfolio</a>
                 </div>
               </nav>
         </div>
@@ -63,13 +63,13 @@
             <div class="row">
                 <div class="col-md-4">
                                 <div class="work">
-                              <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/scratchMatch.jpg?raw=true" class="img-fluid" alt="Scratch Match">  
+                              <img src="pics/Camera%20Roll/scratchMatch.jpg" class="img-fluid" alt="Scratch Match">  
                                 <h3>Scratch Match</h3>
                                 </div>
                 </div>
                 <div class="col-md-4">
                               <div class="work">
-                                  <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/scratch.jpg?raw=true" class="img-fluid" alt="Scratch game">
+                                  <img src="pics/Camera%20Roll/scratch.jpg" class="img-fluid" alt="Scratch game">
                                   <h3>Scratch</h3>
                               </div>  
                 </div>
@@ -87,13 +87,13 @@
             <div class="row">
                     <div class="col-md-4">
                             <div class="work">
-                                <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/school.jpg?raw=true" class="img-fluid" alt="school">
+                                <img src="pics/Camera%20Roll/school.jpg" class="img-fluid" alt="school">
                                 <h3>School</h3>
                             </div>
                     </div>
                     <div class="col-md-4">
                         <div class="work">
-                            <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/resume.jpg?raw=true" class="img-fluid" alt="resume">
+                            <img src="pics/Camera%20Roll/resume.jpg" class="img-fluid" alt="resume">
                             <h3>Resume</h3>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
             <div class="row">
                     <div class="col-md-4">
                         <div class="work">
-                        <img src="https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/hobbies.jpg?raw=true" class="img-fluid" alt="hobbies">
+                        <img src="pics/Camera%20Roll/hobbies.jpg" class="img-fluid" alt="hobbies">
                         <h3>Hobbies</h3>
                         </div>
                     </div>
