--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
                 <nav class="navbar navbar-light bg-light" id="nav">
                         <span class="navbar-brand mb-0 h1"><h1 id="jon">Jonathan Hernandez</h1></span>
                         <div id="links">
-                                <a href="file:///C:/Users/jonat/Documents/codingBootcamp/myRepo/BootStrap-porfolio/index.html" class="links">About</a>
-                                <a href="file:///C:/Users/jonat/Documents/codingBootcamp/myRepo/BootStrap-porfolio/contact.html" class="links">Contact</a>
-                                <a href="file:///C:/Users/jonat/Documents/codingBootcamp/myRepo/BootStrap-porfolio/portfolio.html" class="links">Portfolio</a>
+                                <a href="index.html" class="links">About</a>
+                                <a href="contact.html" class="links">Contact</a>
+                                <a href="portfolio.html" class="links">Portfolio</a>
                         </div>
                       </nav>
         </div>
