--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                </p>
                     </div>
                     <div class="col-md-4">
-                    <img src="pics/Camera%20Roll/hack.jpg?raw=true" class="img-fluid" alt="Responsive image">
+                    <img src="pics/Camera%20Roll/hack.jpg" class="img-fluid" alt="Responsive image">
                     </div>
             </div>
         </div>
